# haste

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  debug.sh
core/osp_core/: Cargo.toml  osp_core.h
core/osp_core/examples/: ingest_10k.rs  playground.rs
core/osp_core/migrations/: 0001_init.sql
core/osp_core/src/: db.rs  ffi.rs  lib.rs  models.rs  search.rs
core/osp_core/tests/: search_basic.rs
gui/macos/Haste/: Info.plist  module.modulemap  osp_core-Bridging-Header.h
gui/macos/Haste/Sources/: AppDelegate.swift  ClipboardMonitor.swift  CoreBridge.swift  GlobalHotkey.swift  SearchWindow.swift  VersionChecker.swift  main.swift
