[package]
name = "osp_core"
version = "0.2.0"
edition = "2021"
authors = ["Haste Project Contributors"]
license = "GPL-3.0"
description = "Core library for Haste clipboard manager with SQLite FTS5 search"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
chrono = "0.4"

[features]
default = []

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[example]]
name = "ingest_10k"
path = "examples/ingest_10k.rs"

